@@ -1,5 +1,11 @@
 2012-05-11  Helmut Eller  <heller@common-lisp.net>
 
+	* swank-sbcl.lisp (stream-force-output): Use with-world-lock
+	i.e. with-recursive-lock instead of with-mutex.
+	* slime.el (sbcl-world-lock): New test.
+
+2012-05-11  Helmut Eller  <heller@common-lisp.net>
+
 	* swank-sbcl.lisp (stream-force-output): Don't use
 	with-deadline. Grab the world-lock instead.
 	(condition-timed-wait): Use the :timeout argument for real.
